--- a/ci-cd-codepipeline.cfn.yml
+++ b/ci-cd-codepipeline.cfn.yml
@@ -17,7 +17,7 @@ Parameters:
   GitSourceRepo:
     Type: String
     Description: GitHub source repository - must contain a Dockerfile and buildspec.yml in the base
-    Default: Fullstack-dev-udacity/deployment-project
+    Default: udacity-deployment
     MinLength: 1
     MaxLength: 100
     ConstraintDescription: You must enter a GitHub repository name
@@ -369,3 +369,4 @@ Resources:
                 - Name: BuildOutput
               RunOrder: 1
     DependsOn: CodeBuildProject
+ 
