--- a/aws-auth-patch.yml
+++ b/aws-auth-patch.yml
@@ -10,6 +10,7 @@ data:
       - system:nodes
       rolearn: arn:aws:iam::017907330856:role/eksctl-simple-jwt-api-nodegroup-n-NodeInstanceRole-1DBHED9TMYRZZ
       username: system:node:{{EC2PrivateDNSName}}
+    - groups:
       - system:masters
       rolearn: arn:aws:iam::017907330856:role/UdacityFlaskDeployCBKubectlRole
       username: build
